# open-p2p

./: .gitignore  CHANGES_SUMMARY.md  DEPENDENCIES_WINDOWS.md  README.md  WINDOWS_MODIFICATIONS.md  WINDOWS_NATIVE_SUPPORT.md  WINDOWS_SETUP.md  pyproject.toml
elefant/data/: __init__.py  dataset_config.py  video_proto_dataset.py
elefant/data/rescale/: rescale.py  resize.py
elefant/inference/: unix_socket_server.py
elefant/inference/script/: inference_load_test.py
elefant/policy_model/: config.py  inference.py  stage3_finetune.py
scripts/: download_checkpoints.py
